Project

General

Profile

Actions

Bug #20913

closed

osd: leak from osd/PGBackend.cc:136 PGBackend::handle_recovery_delete()

Added by Sage Weil over 6 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

    <frame>
      <ip>0x7EBB41</ip>
      <obj>/usr/bin/ceph-osd</obj>
      <fn>emplace_back&lt;const std::pair&lt;hobject_t, eversion_t&gt;&amp;&gt;</fn>
      <dir>/usr/include/c++/4.8.2/bits</dir>
      <file>stl_list.h</file>
      <line>1026</line>
    </frame>
    <frame>
      <ip>0x7EBB41</ip>
      <obj>/usr/bin/ceph-osd</obj>
      <fn>_M_initialize_dispatch&lt;std::_List_const_iterator&lt;std::pair&lt;hobject_t, eversion_t&gt; &gt; &gt;</fn>
      <dir>/usr/include/c++/4.8.2/bits</dir>
      <file>stl_list.h</file>
      <line>1491</line>
    </frame>
    <frame>
      <ip>0x7EBB41</ip>
      <obj>/usr/bin/ceph-osd</obj>
      <fn>list&lt;std::_List_const_iterator&lt;std::pair&lt;hobject_t, eversion_t&gt; &gt;, void&gt;</fn>
      <dir>/usr/include/c++/4.8.2/bits</dir>
      <file>stl_list.h</file>
      <line>627</line>
    </frame>
    <frame>
      <ip>0x7EBB41</ip>
      <obj>/usr/bin/ceph-osd</obj>
      <fn>insert&lt;std::_List_const_iterator&lt;std::pair&lt;hobject_t, eversion_t&gt; &gt;, void&gt;</fn>
      <dir>/usr/include/c++/4.8.2/bits</dir>
      <file>stl_list.h</file>
      <line>1152</line>
    </frame>
    <frame>
      <ip>0x7EBB41</ip>
      <obj>/usr/bin/ceph-osd</obj>
      <fn>std::list&lt;std::pair&lt;hobject_t, eversion_t&gt;, std::allocator&lt;std::pair&lt;hobject_t, eversion_t&gt; &gt; &gt;::operator=(std::list&lt;std::pair&lt;hobject_t, eversion_t&gt;, std::allocator&lt;std::pair&lt;hobject_t, eversion_t&gt; &gt; &gt; const&amp;)</fn>
      <dir>/usr/include/c++/4.8.2/bits</dir>
      <file>list.tcc</file>
      <line>199</line>
    </frame>
    <frame>
      <ip>0x7E6119</ip>
      <obj>/usr/bin/ceph-osd</obj>
      <fn>PGBackend::handle_recovery_delete(boost::intrusive_ptr&lt;OpRequest&gt;)</fn>
      <dir>/usr/src/debug/ceph-12.1.2-165-g873ce67/src/osd</dir>
      <file>PGBackend.cc</file>
      <line>136</line>
    </frame>
    <frame>
      <ip>0x7E69D3</ip>
      <obj>/usr/bin/ceph-osd</obj>
      <fn>PGBackend::handle_message(boost::intrusive_ptr&lt;OpRequest&gt;)</fn>
      <dir>/usr/src/debug/ceph-12.1.2-165-g873ce67/src/osd</dir>
      <file>PGBackend.cc</file>
      <line>103</line>
    </frame>
    <frame>
      <ip>0x75294D</ip>
      <obj>/usr/bin/ceph-osd</obj>
      <fn>PrimaryLogPG::do_request(boost::intrusive_ptr&lt;OpRequest&gt;&amp;, ThreadPool::TPHandle&amp;)</fn>
      <dir>/usr/src/debug/ceph-12.1.2-165-g873ce67/src/osd</dir>
      <file>PrimaryLogPG.cc</file>
      <line>1726</line>
    </frame>
    <frame>
      <ip>0x5E67B8</ip>
      <obj>/usr/bin/ceph-osd</obj>
      <fn>OSD::dequeue_op(boost::intrusive_ptr&lt;PG&gt;, boost::intrusive_ptr&lt;OpRequest&gt;, ThreadPool::TPHandle&amp;)</fn>
      <dir>/usr/src/debug/ceph-12.1.2-165-g873ce67/src/osd</dir>
      <file>OSD.cc</file>
      <line>9509</line>
    </frame>
    <frame>
      <ip>0x8546F6</ip>
      <obj>/usr/bin/ceph-osd</obj>
      <fn>PGQueueable::RunVis::operator()(boost::intrusive_ptr&lt;OpRequest&gt; const&amp;)</fn>
      <dir>/usr/src/debug/ceph-12.1.2-165-g873ce67/src/osd</dir>
      <file>PGQueueable.cc</file>
      <line>22</line>
    </frame>

/a/sage-2017-08-04_15:44:16-rados-wip-sage-testing-20170804a-distro-basic-smithi/1482883

Related issues 1 (0 open1 closed)

Copied to RADOS - Backport #21095: osd: leak from osd/PGBackend.cc:136 PGBackend::handle_recovery_delete()ResolvedKefu ChaiActions
Actions #1

Updated by Kefu Chai over 6 years ago

  • Status changed from 12 to Fix Under Review
  • Assignee set to Kefu Chai
  • Backport set to luminous
Actions #2

Updated by Kefu Chai over 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Kefu Chai over 6 years ago

  • Copied to Backport #21095: osd: leak from osd/PGBackend.cc:136 PGBackend::handle_recovery_delete() added
Actions #5

Updated by Sage Weil over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF