osd/PGBackend: release a msg using msg->put() not delete

fix the regression introduced by b739a11c

Fixes: http://tracker.ceph.com/issues/20913
Signed-off-by: Kefu Chai <kchai@redhat.com>