src/osd/PGBackend.cc
@@ -141,7 +141,7 @@ void PGBackend::handle_recovery_delete(OpRequestRef op)
       if (r != -EAGAIN) {
 	get_parent()->send_message_osd_cluster(reply, conn.get());
       } else {
-	delete reply;
+	reply->put();
       }
     }));
   gather.activate();
